WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57167
Graphic corruption appeared with Silverlight contents while resizing window
https://bugs.webkit.org/show_bug.cgi?id=57167
Summary
Graphic corruption appeared with Silverlight contents while resizing window
Anders Carlsson
Reported
2011-03-26 14:30:18 PDT
Graphic corruption appeared with Silverlight contents while resizing window
Attachments
Patch
(2.56 KB, patch)
2011-03-26 14:32 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-03-26 14:32:17 PDT
Created
attachment 87047
[details]
Patch
Anders Carlsson
Comment 2
2011-03-26 14:36:18 PDT
Committed
r82048
: <
http://trac.webkit.org/changeset/82048
>
WebKit Review Bot
Comment 3
2011-03-26 16:29:36 PDT
http://trac.webkit.org/changeset/82048
might have broken Windows 7 Release (Tests) The following tests are not passing: fast/block/positioning/053.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug