2011-03-26  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Graphic corruption appeared with Silverlight contents while resizing window
        https://bugs.webkit.org/show_bug.cgi?id=57167
        <rdar://problem/9094052>

        Pass DispatchMessageEvenWhenWaitingForSyncReply when sending GeometryDidChange messages since that will guarantee
        that those messages will be handled before PaintEntirePlugin messages which prevents the PaintEntirePlugin handler from
        painting into the wrong backing store.

        * WebProcess/Plugins/PluginProxy.cpp:
        (WebKit::PluginProxy::geometryDidChange):


Canonical link: https://commits.webkit.org/71853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82048 268f45cc-cd09-0410-ab3c-d52691b4dbfc